Added webpage pop ups for user input errors.
Added code in Signup.php to check if email is already in database as well as a pop up to let user know their email is already registered.

--- a/CSCI150_Project_Pages/RegisterPage.html
+++ b/CSCI150_Project_Pages/RegisterPage.html
@@ -33,7 +33,7 @@
                     <!-- pattern match email so only fresno state emails can be used pattern =".+@mail.fresnostate.edu"
                                         placeholder="@mail.fresnostate.edu or @csufresno.edu"-->
                     <label for="email">E-Mail:</label>
-                    <input type="text" id="email" name="email" placeholder="@mail.fresnostate.edu or @csufresno.edu">
+                    <input type="text" id="email" name="email" placeholder="@mail.fresnostate.edu or @csufresno.edu" required>
                     
                     <label for="pwd">Password:</label>
                     <input type="password" id="pwd" name="pwd" required>
