--- a/CSCI150_Project_Pages/RegisterPage.html
+++ b/CSCI150_Project_Pages/RegisterPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
-    <link rel="stylesheet" href="./LoginPage.css">
+    <link rel="stylesheet" href="./mainStyleSheet.css">
     <script defer src="./EmailVerification.js"></script>
 </head>
 <body>
