Inter-connect + listing page
Inter-connect all pages except home page because Julian is working on it.

--- a/CSCI150_Project_Pages/HomePage.html
+++ b/CSCI150_Project_Pages/HomePage.html
@@ -11,11 +11,11 @@
         <img id="logoImage" src="./images/logoImage.png" alt="Website Image Logo">
         <div class="foreground">
             <div class="topBar">
-                <a href="#home">Home</a>
-                <a href="#forums">Forums</a>
-                <a href="#listings">Donation Listings</a>
-                <a href="#About">About</a>
-                <a href="#Login">Login</a>
+                <a href="HomePage.html">Home</a>
+                <a href="ForumPage.html">Forums</a>
+                <a href="ListPage.html">Donation Listings</a>
+                <a href="AboutPage.html">About</a>
+                <a href="LoginPage.html">Login</a>
             </div>
             <div class="pageContent">
                 <div class="textBox">
