--- a/CSCI150_Project_Pages/LoginPage.html
+++ b/CSCI150_Project_Pages/LoginPage.html
@@ -12,11 +12,11 @@
         <img class="logoImage" src="./images/logoImage.png" alt="Website Image Logo">
         <div class="navBar-container">
             <div class="navBar">
-                <a href="#home">Home</a>
-                <a href="#forums">Forums</a>
-                <a href="#listings">Donation Listings</a>
-                <a href="#About">About</a>
-                <a href="#Login">Login</a>
+                <a href="HomePage.html">Home</a>
+                <a href="ForumPage.html">Forums</a>
+                <a href="ListPage.html">Donation Listings</a>
+                <a href="AboutPage.html">About</a>
+                <a href="LoginPage.html">Login</a>
             </div>
         </div>
         <div class="pageContent">
