Updated Homepage and CSS
Made the homepage responsive and added CSS for the homepage elements

--- a/CSCI150_Project_Pages/HomePage.html
+++ b/CSCI150_Project_Pages/HomePage.html
@@ -1,29 +1,56 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./mainStyleSheet.css">
-    
 </head>
 <body>
-<div>
     <div class="mainHolder">
-        <img id="logoText" src="./images/logoText.png" alt="Website Text Logo">
-        <img id="logoImage" src="./images/logoImage.png" alt="Website Image Logo">
-        <div class="foreground">
-            <div class="topBar">
+        <img class="logoText" src="./images/logoText.png" alt="Website Text Logo">
+        <img class="logoImage" src="./images/logoImage.png" alt="Website Image Logo">
+        <div class="navBar-container">
+            <div class="navBar">
                 <a href="HomePage.html">Home</a>
                 <a href="ForumPage.html">Forums</a>
                 <a href="ListPage.html">Donation Listings</a>
                 <a href="AboutPage.html">About</a>
                 <a href="LoginPage.html">Login</a>
             </div>
-            <div class="pageContent">
-                <div class="textBox">
-                    This is a placeholder for the homepage. You are redirected here when you are logged in. The login button should be replaced with a profile drop down menu with a logout page and notification box.
+        </div>
+        <div class="homePageContent">
+            <div class="leftSide">
+                <div class="forumPreview">
+                    This is where the forumPreview will be.
+                    <div class="forumItem">
+                        <a href="#">SQL query to fetch the first 3 forum elements.</a>
+                    </div>
+                </div>
+                <div class="listingMenu">
+                    <a href="#temp">Temp</a>
+                    <a href="#books">Books</a>
+                    <a href="#furniture">Furniture</a>
+                    <a href="#electronics">Electronics</a>
+                    <a href="#clothes">Clothes</a>
+                    <a href="#more">More</a>
+                </div>
+            </div>
+            
+            <div class="rightSide">
+                <div class="newsFeed">
+                    Import a news feed from here. This paragraph is just to fill space.
+                    <br><br><br>
+                    Henry Madden Library’s Tech Lending service now has 100 Logitech headsets ready for student use. The headsets are part of Logitech’s recent donation of 2,300 headsets to the California State University system to support the virtual learning experience of CSU students.
+                    <br><br>
+                    The headsets include over-ear headphones and an extended mic, which enhances students’ ability to hear and be heard in the virtual classroom. These enhancements are intended to aid student focus and increase engagement in virtual presentations and discussions.
+                    <br><br>
+                    As Fresno State and other CSU campuses have moved to primarily virtual instruction, increasing investments into technology is a central focus. Access to the technology devices students need is vital to their success. The Madden Library’s Tech Lending has supported those needs for three years, offering a wide variety of technology for students, faculty and staff alike.
+                    <br><br>
+                    Over the summer, Tech Lending also added several new items to its lending roster, including noise-canceling headphones, Apple pens, surface pens, Go-pros that double as webcams, and projectors to increase monitor visibility. Fresno State Technology Services also placed 70 new webcams with Tech Lending for distribution to both students and faculty. Thanks to CARES Act funding, Tech Lending also refreshed and updated its stock of laptops, Chromebooks, tablets, cables, chargers and other items to support student and faculty technology needs this academic year.
                 </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
