Small changes fixing broken links and spacing

--- a/CSCI150_Project_Pages/HomePage.html
+++ b/CSCI150_Project_Pages/HomePage.html
@@ -28,12 +28,11 @@
                     </div>
                 </div>
                 <div class="listingMenu">
-                    <a href="#temp">Temp</a>
-                    <a href="#books">Books</a>
-                    <a href="#furniture">Furniture</a>
-                    <a href="#electronics">Electronics</a>
-                    <a href="#clothes">Clothes</a>
-                    <a href="#more">More</a>
+                    <a href="BooksList.html">Books</a>
+                    <a href="FurnituresList.html">Furniture</a>
+                    <a href="ElectronicsList.html">Electronics</a>
+                    <a href="CLothesList.html">Clothes</a>
+                    <a href="OtherList.html">Other</a>
                 </div>
             </div>
             
