--- a/CSCI150_Project_Pages/ListPage.html
+++ b/CSCI150_Project_Pages/ListPage.html
@@ -22,20 +22,14 @@
             </div>
         </div>
 	</div>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<div>
+	<div class="interactionMenu">
 		<h1 style="text-align:center">Categories</h1>
 		<table class="center">
 			<tr>
 				<th>Books</th> <!--Columns -->
 				<th>Furnitures</th>
 				<th>Electronics</th>
-				<th>CLothes</th>
+				<th>Clothes</th>
 				<th>Other</th>
 			</tr>
 			<tr>
@@ -55,7 +49,7 @@
 					</a>
 				</td>
 				<td>
-					<a href="CLothesList.html">
+					<a href="ClothesList.html">
 						<img src="./images/clothes.jpg" width="200" height="200">
 					</a>
 				</td>
