--- a/CSCI150_Project_Pages/User Listing.html
+++ b/CSCI150_Project_Pages/User Listing.html
@@ -10,5 +10,15 @@
 
 <body>
 
+<h1>Create A Listing</h1>
+
+<form action="/action_page.php" method="get" target="_blank">
+  <label for="Pname">Donation Name</label>
+  <input type="text" id="Pname" name="Pname"><br><br>
+  <input type="submit" value="Submit">
+</form>
+
+<p>Click on the submit button, and the input will be sent to a page on the server called "action_page.php".</p>
+
 </body>
 </html>
