--- a/CSCI150_Project_Pages/User Listing.html
+++ b/CSCI150_Project_Pages/User Listing.html
@@ -18,7 +18,7 @@
   <input type="submit" value="Submit">
 </form>
 
-<p>Click on the submit button, and the input will be sent to a page on the server called "action_page.php".</p>
+<p>Click on the submit button.</p>
 
 </body>
 </html>
