--- a/CSCI150_Project_Pages/BooksList.html
+++ b/CSCI150_Project_Pages/BooksList.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-    <title></title>
+	<title></title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./mainStyleSheet.css">
 </head>
@@ -22,11 +23,18 @@
             </div>
         </div>
 	</div>
+	<br>
+	<br>
 	<div>
 		<h1 style="text-align:center">Place Holder BooksList: Donating</h1>
 		<!-- Load listing here -->
 	</div>
-	
+	<br>
+	<br>
+	<div>
+		<h1 style="text-align:center">Place Holder BooksList: Looking for</h1>
+		<!-- Load listing here -->
+	</div>
 </body>
 
 </html>
