--- a/CSCI150_Project_Pages/userListing1.html
+++ b/CSCI150_Project_Pages/userListing1.html
@@ -3,8 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./mainStyleSheet.css">
 </head>
@@ -23,18 +22,23 @@
             </div>
         </div>
 	</div>
-	<br>
-	<br>
-	<div>
-		<h1 style="text-align:center">Place Holder ClothesList: Donating</h1>
-		<!-- Load listing here -->
-	</div>
-	<br>
-	<br>
-	<div>
-		<h1 style="text-align:center">Place Holder ClothesList: Looking for</h1>
-		<!-- Load listing here -->
-	</div>
+    
+    <div class="backToListings">
+        <a href="FurnituresList.html">Back to Listings</a>
+    </div>
+    
+    <div class="listingContainer">
+        <div class="listingImage">
+            <img class="listingImage" src="./images/table.webp" alt="">
+        </div>
+        <div class="listingBody">
+            Looking to give away this table! Lightly used. 50in/50in/40in (L/D/H)
+        </div>
+        <div class="listingPoster">
+            <a href="userprofile/username.html" class="poster">
+                [ProfileName]
+            </a>
+        </div>
+    </div>
 </body>
-
 </html>
