--- a/CSCI150_Project_Pages/User Listing.html
+++ b/CSCI150_Project_Pages/User Listing.html
@@ -1,4 +1,4 @@
-+<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -12,7 +12,7 @@
 
 <h1>Create A Listing</h1>
 
-<form action="/action_page.php" method="get" target="_blank">
+<form action="/action_page.php" method="post" target="_blank">
   <label for="Pname">Donation Name</label>
   <input type="text" id="Pname" name="Pname"><br><br>
   <input type="submit" value="Submit">
