Fixed errors on Example Listings

--- a/CSCI150_Project_Pages/userListing1.html
+++ b/CSCI150_Project_Pages/userListing1.html
@@ -29,7 +29,7 @@
     
     <div class="listingContainer">
         <div class="listingImage">
-            <img class="listingImage" src="./images/table.webp" alt="">
+            <img class="listingImage" src="./images/table.png" alt="">
         </div>
         <div class="listingBody">
             Looking to give away this table! Lightly used. 50in/50in/40in (L/D/H)
