--- a/CSCI150_Project_Pages/userListing2.html
+++ b/CSCI150_Project_Pages/userListing2.html
@@ -30,7 +30,7 @@
     <div class="listingContainer">
         <div class="listingImage">
         <!-- figure out how to take a make the source pull from database -->
-            <img class="listingImage" src="./images/dresser.webp" alt="">
+            <img class="listingImage" src="./images/dresser.png" alt="">
         </div>
         <div class="listingBody">
             Description about the item.
