--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -25,8 +25,10 @@
 <h1>Create A Listing</h1>
 
 <form action="/action_page.php" method="post" target="_blank">
-  <label for="Pname">Donation Name</label>
-  <input type="text" id="Pname" name="Pname"><br><br>
+  <label for="sub">Subject</label>
+  <input type="text" id="sub" name="sub" required><br><br>
+  <label for="dd" </label>
+  <label type = "dd" id="dd" name= "dd" required>
   <input type="submit" value="Submit">
 </form>
 
