--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -168,8 +168,11 @@
                     <option value="VIT">Viticulture (VIT)</option>
                     <option value="WS">Women's Studies (WS)</option>
             </select>
+		<div>
+	</div>
 			
   <label for="sub">Subject</label>
+  
   <input type="text" id="sub" name="sub" required>
   </div>
   <div>
