--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -172,18 +172,19 @@
 	</div>
 			
   <label for="sub">Subject</label>
-  
-  <input type="text" id="sub" name="sub" required>
+  <input type="text" id="sub" name="sub" required maxlength="50">
   </div>
   <div>
   <label></label>
+  
   <textarea id="myTextArea" maxlength="500" rows="30" cols="60"placeholder= "Description"required></textarea>
   <br><br>
+  
  
   <input type="submit" value="Submit">
 </form>
 
-<p>Click on the submit button.</p>
+
 
 </body>
 </html>
