--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -173,17 +173,21 @@
 			
   <label for="sub">Subject</label>
   
-  <input type="text" id="sub" name="sub" required>
+  <input type="text" id="sub" name="sub" required maxlength="50">
   </div>
   <div>
   <label></label>
-  <textarea id="myTextArea" maxlength="500" rows="30" cols="60"placeholder= "Description"required></textarea>
+  <textarea id="myTextArea" maxlength="1000" rows="30" cols="60"placeholder= "Description"required
+  style="border:3px solid #F7730E;">
+</textarea>
+
+
   <br><br>
  
   <input type="submit" value="Submit">
 </form>
 
-<p>Click on the submit button.</p>
+
 
 </body>
 </html>
