--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -172,14 +172,17 @@
 	</div>
 			
   <label for="sub">Subject</label>
+  
   <input type="text" id="sub" name="sub" required maxlength="50">
   </div>
   <div>
   <label></label>
-  
-  <textarea id="myTextArea" maxlength="500" rows="30" cols="60"placeholder= "Description"required></textarea>
+  <textarea id="myTextArea" maxlength="1000" rows="30" cols="60"placeholder= "Description"required
+  style="border:3px solid #F7730E;">
+</textarea>
+
+
   <br><br>
-  
  
   <input type="submit" value="Submit">
 </form>
