--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -178,7 +178,7 @@
   <div>
   <label></label>
   <textarea id="myTextArea" maxlength="1000" rows="30" cols="60"placeholder= "Description"required
-  style="border:3px solid #F7730E;">
+  style="border:3px solid #1E9AFF;">
 </textarea>
 
 
