--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -25,7 +25,7 @@
 <h1>Create A Forum</h1>
 
 
-<form action="/action_page.php" method="post" target="_blank">
+<form action="createFor.php" method="post" target="_blank">
 
 		<div>
 			<p>Select Class</p>
