--- a/CSCI150_Project_Pages/Create Forum.html
+++ b/CSCI150_Project_Pages/Create Forum.html
@@ -1,3 +1,7 @@
+<?php
+   require ("./Session.php");
+?>
+
 <!DOCTYPE HTML>
 <html>
 
@@ -25,7 +29,7 @@
 <h1>Create A Forum</h1>
 
 
-<form action="createFor.php" method="post" target="_blank">
+<form action="ForumPage.php" method="post" target="_blank">
 
 		<div>
 			<p>Select Class</p>
@@ -171,20 +175,26 @@
 		<div>
 	</div>
 			
-  <label for="sub">Subject</label>
   
-  <input type="text" id="sub" name="sub" required maxlength="50">
+  
+  <input type="text" id="sub" name="sub"placeholder ="Subject" required maxlength="50">
   </div>
-  <div>
-  <label></label>
-  <textarea id="myTextArea" maxlength="1000" rows="30" cols="60"placeholder= "Description"required
-  style="border:3px solid #1E9AFF;">
-</textarea>
-
-
-  <br><br>
  
-  <input type="submit" value="Submit">
+ <div>
+  <label></label>
+	<textarea id="myTextArea" required maxlength="1000"rows="30" cols="60"placeholder="Write post..."
+	spellcheck = "true"
+	style="border:4px solid #1E9AFF;">
+	</textarea>
+</div>
+
+<div>
+  <input type="file" id="img" name="img" input accept=".jpg,.png">
+</div>
+  
+<br><br>
+ 
+  <input type="submit" value="Post">
 </form>
 
 
